# rgbd_evaluation

./: README.md
record_rgbd_bagfile/: manifest.xml
record_rgbd_bagfile/include/record_bagfile/: record_bagfile.h
record_rgbd_bagfile/src/: record_bagfile.cpp
rgbd_dataset_gen/: CMakeLists.txt  manifest.xml
rgbd_dataset_gen/src/: apply_blur_noise.cpp  create_dataset.cpp  record_bagfile.cpp  record_node.cpp
